package ua.hillel.lessons.lesson26.grasp.demos._6_polymorphism._01;

public class Cat extends Animal {

    public void speak() {
        System.out.println("Meow meow");
    }
}
