package ua.hillel.lessons.lesson26.grasp.demos._6_polymorphism._01;

public class Dog extends Animal {

    public void speak() {
        System.out.println("WOF WOF");
    }
}
